--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 :root {
   /* =========================
      Base Dark Colors
@@ -116,14 +118,14 @@ body {
   padding-bottom: 2rem;
   background-color: var(--color-bg-main);
 
-  @media (max-width: 900px) and (min-width: 600px) {
+  @include tablet-mobile {
     & {
       grid-template-columns: repeat(2, 1fr);
       align-content: start;
     }
   }
 
-  @media (max-width: 600px) {
+  @include mobile {
     & {
       grid-template-columns: repeat(1, 1fr);
     }
@@ -142,7 +144,7 @@ body {
     padding: var(--default-padding);
     justify-content: space-evenly;
 
-    @media (max-width: 900px) {
+    @include tablet {
       & {
         margin: 0 var(--default-padding);
       }
@@ -152,7 +154,7 @@ body {
   &:nth-child(1) {
     grid-row: 1/3;
 
-    @media (max-width: 900px) and (min-width: 600px) {
+    @include tablet-mobile {
       & {
         flex-direction: row;
         grid-column: 1/3;
@@ -161,7 +163,7 @@ body {
     }
 
     & .top {
-      @media (max-width: 900px) {
+      @include tablet {
         & {
           display: flex;
           align-items: center;
@@ -172,7 +174,7 @@ body {
     }
 
     & .bottom {
-      @media (max-width: 900px) {
+      @include tablet {
         justify-content: space-evenly;
         flex: 1;
         flex-wrap: wrap;
@@ -181,7 +183,7 @@ body {
     }
 
     & .icons {
-      @media (max-width: 900px) {
+      @include tablet {
         grid-template-columns: repeat(6, 1fr);
       }
     }
